# lwi

./: .gitmodules  default.nix
.github/workflows/: main.yml
src/: CMakeLists.txt  main.cpp
